<resources>
    <string name="app_name">Via Links</string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="step_one">1. First turn on your wifi hotspot and connect the computers to the wifi hotspot</string>
    <string name="step_two">2. Use to the upload link to upload files and the download link to download the files</string>
    <string name="step_three">3. Now you can send files by uploading files in one computer and downloading them in the other (Does not need internet connection)</string>
    <string name="upload_link">Upload link</string>
    <string name="upload_address">192.168.43.1:8080/upload.html</string>
    <string name="step_four">4. Make sure your phone does not to go into doze mode while downloading files</string>
    <string name="download_link">Download Link</string>
    <string name="download_address">192.168.43.1:8080/download.html</string>
    <string name="rate_app">Rate app</string>
</resources>
